# api/openapi.yaml
@@ -5,12 +5,6 @@ info:
   version: v1
   description: API for Likit
 
-servers:
-  - url: /admin/v1
-
-# security:
-#   - access_token: []
-
 paths:
   /user/login:
     post:
@@ -41,6 +35,19 @@ paths:
           $ref: "#/components/responses/ResponseNotFound"
         "500":
           $ref: "#/components/responses/ResponseInternalServerError"
+
+  /businesses:
+    get:
+      summary: Get Business List
+      operationId: getBusinesses
+      responses:
+        "200":
+          $ref: "#/components/responses/ResponseBusinessList"
+        "404":
+          $ref: "#/components/responses/ResponseNotFound"
+        "500":
+          $ref: "#/components/responses/ResponseInternalServerError"
+
 
 components:
   # securitySchemes:
@@ -97,6 +104,13 @@ components:
             registrationTime: "2020-01-01 00:00:00"
             permissions: "admin"
 
+    ResponseBusinessList:
+      description: BusinessList
+      content:
+        application/json:
+          schema:
+            $ref: "#/components/schemas/Businesses"
+
   schemas:
     BaseResponse:
       properties:
@@ -141,3 +155,38 @@ components:
         permissions:
           type: string
           example: "admin"
+
+    Businesses:
+      properties:
+        businesses:
+          type: array
+          items:
+            $ref: '#/components/schemas/Business'
+
+    Business:
+      properties:
+        title:
+          type: string
+          example: "admin"
+        id:
+          type: string
+          example: "admin"
+        type:
+          type: string
+          example: "SIMPLE_VOTE"
+        create_at:
+          type: string
+          example: "2020-01-01 00:00:00"
+        update_at:
+          type: string
+          example: "2020-01-01 00:00:00"
+        config:
+          $ref: '#/components/schemas/Config'
+          
+    Config:
+      properties:
+        dataSourceConfig:
+          type: array
+          items:
+            type: string
+            example: "redisconfig:localhost:6379"
