# internal/adapter/in/restful/route/admin_server.go
@@ -4,17 +4,23 @@ import (
 	"net/http"
 
 	"github.com/CorrectRoadH/Likit/codegen"
+	"github.com/CorrectRoadH/Likit/internal/port/in"
 	"github.com/CorrectRoadH/Likit/utils"
 	"github.com/labstack/echo/v4"
 )
 
-type userServer struct{}
-
-func NewUserService() codegen.ServerInterface {
-	return &userServer{}
+// TODO 回头把这个改个好名，别把controller和service搞混了
+type adminApiService struct {
+	adminServer in.AdminUseCase
 }
 
-func (a *userServer) Login(ctx echo.Context) error {
+func NewAdminApiService(adminServer in.AdminUseCase) codegen.ServerInterface {
+	return &adminApiService{
+		adminServer: adminServer,
+	}
+}
+
+func (a *adminApiService) Login(ctx echo.Context) error {
 	var loginRequest codegen.LoginRequest
 
 	if err := ctx.Bind(&loginRequest); err != nil {
@@ -27,7 +33,7 @@ func (a *userServer) Login(ctx echo.Context) error {
 	})
 }
 
-func (a *userServer) UserInfo(ctx echo.Context) error {
+func (a *adminApiService) UserInfo(ctx echo.Context) error {
 	return ctx.JSON(http.StatusOK, &codegen.ResponseUserInfo{
 		Name:             utils.Ptr("test"),
 		Avatar:           utils.Ptr("https://avatars.githubusercontent.com/u/11234?v=4"),
@@ -36,4 +42,12 @@ func (a *userServer) UserInfo(ctx echo.Context) error {
 		RegistrationTime: utils.Ptr("2021-01-01 00:00:00"),
 		Permissions:      utils.Ptr("admin"),
 	})
+}
+
+func (u *adminApiService) GetBusinesses(ctx echo.Context) error {
+	businesses, err := u.adminServer.Businesses(ctx.Request().Context())
+	if err != nil {
+		return ctx.JSON(http.StatusInternalServerError, err)
+	}
+	return ctx.JSON(http.StatusOK, businesses)
 }
